[tool.poetry]
name = "calc_sla"
version = "0.1.0"
description = ""
authors = ["idlewith <newellzhou@163.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.10"
chinesecalendar = "^1.7.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
